src/test/ui/suggestions/issue-62843.stderr
error[E0277]: the trait bound `String: Pattern<'_>` is not satisfied
  --> $DIR/issue-62843.rs:4:32
   |
LL |     println!("{:?}", line.find(pattern));
   |                           ---- ^^^^^^^ expected an implementor of trait `Pattern<'_>`
   |                           |
   |                           required by a bound introduced by this call
   |
note: required by a bound in `core::str::<impl str>::find`
  --> $SRC_DIR/core/src/str/mod.rs:LL:COL
   |
LL |     pub fn find<'a, P: Pattern<'a>>(&'a self, pat: P) -> Option<usize> {
   |                        ^^^^^^^^^^^ required by this bound in `core::str::<impl str>::find`
help: consider borrowing here
   |
LL |     println!("{:?}", line.find(&pattern));
   |                                +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
